# qfr

./: .gitignore  README.md  docker-compose.yml  script.sql
backend/: Dockerfile  package-lock.json  package.json  server.js
backend/src/: index.ts
backend/src/config/: db.ts
backend/src/controller/: device.controller.ts  mqtt.controller.ts  schedule.controller.ts  zone.controller.ts
backend/src/db/: device.ts  schedule.ts  zone.ts
backend/src/model/: device.ts  schedule.ts
backend/src/routes/: device.route.ts  index.ts  mqtt.route.ts  schedule.route.ts  zone.route.bk.ts  zone.route.ts
esp/: .gitignore  CMakeLists.txt  README.md  qfr_partition.csv  sdkconfig
esp/gperf/: Makefile  mqtt.in
esp/main/: CMakeLists.txt  idf_component.yml  qfr.c  qfr_event.h  qfr_fat.c  qfr_fat.h  qfr_gpio.c  qfr_gpio.h  qfr_mqtt.c  qfr_mqtt.h  qfr_nvs.c  qfr_nvs.h  qfr_schedule.c  qfr_skd.c  qfr_skd.h  qfr_sntp.c  qfr_sntp.h  qfr_types.h  qfr_wifi.c  qfr_wifi.h
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: AnimatedLayout.tsx  App.css  App.tsx  constants.ts  main.tsx
frontend/src/components/: MqttTest.tsx  QFRBreadcrumb.tsx  QFRModal.tsx
frontend/src/components/device/: AddDeviceButton.tsx  AddDeviceModal.tsx  DeleteDeviceButton.tsx  DeleteDeviceModal.tsx  DeviceAddEdit.tsx  DeviceList.tsx  EditDeviceButton.tsx  EditDeviceModal.tsx
frontend/src/components/mqtt/: MqttTest.tsx
frontend/src/components/schedule/: AddScheduleButton.tsx  DeleteScheduleButton.tsx  EditScheduleButton.tsx  ScheduleList.tsx
frontend/src/components/zone/: AddZoneButton.tsx  AddZoneModal.tsx  DeleteZoneButton.tsx  ZoneList.tsx  (+4 more)
frontend/src/layouts/: AnimatedOutlet.tsx  Layout.tsx
frontend/src/routes/: Devices.tsx  Home.tsx  Layout.tsx  Mqtt.tsx  NotFound.tsx  Schedule.tsx  Zones.tsx
frontend/src/services/: DeviceAPIService.tsx  ScheduleAPIService.tsx  ZoneAPIService.tsx
frontend/src/types/: DeviceType.ts  QFRModalType.ts  ZoneType.ts  device.ts  zone.ts
frontend/src/views/: Devices.tsx  Home.tsx  Mqtt.tsx  NotFound.tsx  Schedule.tsx  Zones.tsx
info/: README.md  softap-provisioning.md
mosquitto/: mosquitto.conf
